added Files slides

--- a/notebooks/Files.ipynb
+++ b/notebooks/Files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -25,6 +25,328 @@
    },
    "source": [
     "# File I/O"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Files\n",
+    "\n",
+    "- Storage of data in memory is *temporary*.\n",
+    "- Files are used for data persistence - **permanent** retention of data.\n",
+    "- File is an abstraction over a sequence of bytes.\n",
+    "    - Each file ends either with an **end-of-file marker** or at a specific byte number recorded in an operating-system-maintained administrative data structure.\n",
+    "- The streams provide communication channels between a program and a particular file or device.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Input/Ouput to and from files\n",
+    "\n",
+    "- File input and file output is an essential in programming.\n",
+    "    - Most software involves more than keyboard input and screen user interfaces.\n",
+    "    - Data needs to be stored somewhere when a program is not running, and that means writing data to disk.\n",
+    "    - For this, we need file input and file output techniques.\n",
+    "- Fortunately, this is EASY in C++!\n",
+    "    - If you know how to do screen output with `cout`, and keyboard input with `cin`, then you already know most of it!\n",
+    "    - File I/O with streams works the same way. The primary difference is that objects other than `cout` and `cin` will be used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Kinds of Files\n",
+    "\n",
+    "- Formatted Text vs. Binary files\n",
+    "    - A text file is simply made of **readable text characters**. It looks like the output that is typically printed to the screen through the `cout` object\n",
+    "    - A binary file contains **unformatted data**, saved in its **raw memory format**. (For example, the integer 123456789 is saved as a 4-byte chunk of data, the same as it's stored in memory - NOT as the 9 digits in this sentence).\n",
+    "- Sequential vs. Random Access files\n",
+    "    - A sequential file is one that is typically written or read **from start to finish**\n",
+    "    - A random access file is one that stores records, all of the same size, and can read or write single records **in place**, without affecting the rest of the file\n",
+    "\n",
+    "- For now, we'll deal with sequential text files\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## File-Processing Class Templates\n",
+    "\n",
+    "- To perform file processing in C++, headers `<iostream>` and `<fstream>` must be included.\n",
+    "- Header `<fstream>` includes the definitions for the stream class templates\n",
+    "    - `basic_ifstream`: a subclass of `basic_istream` for file input\n",
+    "    - `basic_ofstream`: a subclass of `basic_ostream` for file output\n",
+    "    - `basic_fstream`: a subclass of `basic_iostream` for file input and output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## File-Processing Class Templates (cont.)\n",
+    "\n",
+    "- Each stream class template has a predefined specialization for `char` I/O.\n",
+    "\n",
+    "- The <fstream> library provides `typedef` aliases for these template specializations:\n",
+    "    - `ifstream` is an alias for `basic_ifstream<char>`\n",
+    "    - `ofstream` is an alias for `basic_ofstream<char>`\n",
+    "    - `fstream` is an alias for `basic_fstream<char>`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Creating a Sequential File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int main() {\n",
+    "    // ofstream constructor opens file\n",
+    "    ofstream outClientFile{\"clients.txt\", ios::out};\n",
+    "    // exit program if unable to create file\n",
+    "    if ( !outClientFile ) { // overloaded ! operator\n",
+    "        cerr << \"File could not be opened\" << endl;\n",
+    "        exit(EXIT_FAILURE);\n",
+    "    }\n",
+    "    cout << \"Enter the account, name, and balance.\\n\"\n",
+    "         << \"Enter end-of-file to end input.\\n? \";\n",
+    "    \n",
+    "    int account; // the account number\n",
+    "    string name; // the account owner's name\n",
+    "    double balance; // the account balance\n",
+    "\n",
+    "    // read account, name and balance from cin,\n",
+    "    // then place in file\n",
+    "    while ( cin >> account >> name >> balance ) {\n",
+    "        outClientFile << account << ' ' << name\n",
+    "                      << ' ' << balance << endl;\n",
+    "        cout << \"? \";\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Opening a File\n",
+    "\n",
+    "- To open the file for output, create an `ofstream` object.\n",
+    "- Two arguments are passed to the object's constructor:\n",
+    "    - the **filename**, and\n",
+    "    - the **file-open mode**.\n",
+    "    \n",
+    "```c++\n",
+    "// ofstream constructor opens file\n",
+    "ofstream outClientFile{\"clients.txt\", ios::out};\n",
+    "```\n",
+    "- For an `ofstream` object, the file-open mode can be either\n",
+    "    - `ios::out` (the default) to output data to a file\n",
+    "    - `ios::app` to append data to the end of a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Opening a File via the open Member Function\n",
+    "\n",
+    "- You can create an `ofstream` object without opening a specific file\n",
+    "```c++\n",
+    "ofstream outClientFile;\n",
+    "```\n",
+    "- The `ofstream` member function `open` opens a file and attaches it to an existing `ofstream` object as follows:\n",
+    "```c++\n",
+    "outClientFile.open(\"clients.txt\", ios::out);\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Testing Whether a File Was Opened Successfully\n",
+    "\n",
+    "- After creating an `ofstream` object and attempting to open it, we need to determine whether the open operation succeeded\n",
+    "\n",
+    "    - use the overloaded `ios` member function `operator!`\n",
+    "\n",
+    "- Some possible reasons for `open` operation failure\n",
+    "\n",
+    "    - attempting to open a nonexistent file for reading\n",
+    "    - attempting to open a file for reading or writing from a directory that you don't have permission to access\n",
+    "    - opening a file for writing when no disk space is available"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing Data to a File\n",
+    "\n",
+    "- `stream`s overloaded `operator bool` (added in C++11) converts the stream to a `true` or `false` value, so it can be tested in a condition.\n",
+    "    - If the `failbit` or `badbit` has been set for the stream, the overloaded operator returns `false`.\n",
+    "- When **end-of-file** is encountered or bad data is entered, `operator bool` returns `false`\n",
+    "\n",
+    "- Using the stream insertion operator `<<` and the object associated with it, we write data into the file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Closing a File\n",
+    "\n",
+    "- Once the user enters the **end-of-file indicator**.\n",
+    "    - **Ctrl-D** for UNIX/Linux/Mac OS X\n",
+    "    - **Ctrl-Z** for MS Windows\n",
+    "\n",
+    "- This implicitly invokes file object destructor, which closes the `clients.txt` file.\n",
+    "- You also can close the `ofstream` object explicitly, using member function close as follows:\n",
+    "```c++\n",
+    "outClientFile.close();\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Reading Data from a Sequential File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int main() {\n",
+    "    // ifstream constructor opens the file\n",
+    "    ifstream inClientFile(\"clients.txt\", ios::in);\n",
+    "    // exit program if ifstream could not open file\n",
+    "    if ( !inClientFile ) {\n",
+    "        cerr << \"File could not be opened\" << endl;\n",
+    "        exit(EXIT_FAILURE);\n",
+    "    }\n",
+    "    \n",
+    "    cout << left << setw(10) << \"Account\" << setw(13)\n",
+    "         << \"Name\" << \"Balance\\n\" << fixed << showpoint;\n",
+    "    \n",
+    "    int account; // the account number\n",
+    "    string name; // the account owner's name\n",
+    "    double balance; // the account balance\n",
+    "    // display each record in file\n",
+    "    while ( inClientFile >> account >> name >> balance ) {\n",
+    "        cout << left << setw(10) << account << setw(13) << name\n",
+    "             << setw(7) << setprecision(2) << right << balance << endl;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Opening a File for Input\n",
+    "\n",
+    "- Objects of class `ifstream` are opened for **input** by default\n",
+    "```c++\n",
+    "ifstream inClientFile(\"clients.txt\");\n",
+    "```\n",
+    "- Just as with an `ofstream` object, an `ifstream` object can be created without opening a specific file, because a file can be attached to it later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Reading from a File\n",
+    "\n",
+    "- Suppose you need to read from a text file but with each account's data formatted as follows:\n",
+    "```\n",
+    "100 Janie Jones 24.98\n",
+    "```\n",
+    "\n",
+    "- Use stream extraction operator `>>` to read the record from the file as follows:\n",
+    "\n",
+    "```c++\n",
+    "inClientFile >> account >> name >> balance\n",
+    "```\n",
+    "\n",
+    "- The stream extraction operator `>>` treats white space as a delimiter.\n",
+    "    - C++14 new stream manipulator, `quoted`, enables a program to read and write quoted text from a stream."
    ]
   },
   {
@@ -84,13 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Hello           1234"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    int x = 1234;\n",
@@ -115,13 +445,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......1234"
+     ]
+    }
+   ],
    "source": [
     "{\n",
     "    int x = 1234;\n",
