--- a/notebooks/Files.ipynb
+++ b/notebooks/Files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -231,7 +231,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Writing Data to a File\n",
     "\n",
@@ -336,7 +340,7 @@
     "\n",
     "- Suppose you need to read from a text file but with each account's data formatted as follows:\n",
     "```\n",
-    "100 Janie Jones 24.98\n",
+    "100 Jones 24.98\n",
     "```\n",
     "\n",
     "- Use stream extraction operator `>>` to read the record from the file as follows:\n",
@@ -488,7 +492,7 @@
     "```\n",
     "- A parameterized stream manipulator looks like a function call -- it has one or more parameters:\n",
     "```c++\n",
-    "cout << setw(10);\t // setw() is a parameterized manipulator\n",
+    "cout << setw(10); // setw() is a parameterized manipulator\n",
     "```\n",
     "- To use parameterized stream manipulators, you need to include the `<iomanip>` library"
    ]
@@ -510,7 +514,7 @@
     "\n",
     "- `setprecision()` is a parameterized stream manipulator that performs the same task as the member function `precision()`\n",
     "```c++\n",
-    "cout.precision(2);\t   // sets decimal precision to 2 significant digits\n",
+    "cout.precision(2); // sets decimal precision to 2 significant digits\n",
     "cout << setprecision(2);  // does the same thing!\n",
     "```"
    ]
